--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,5 @@ jobs:
         with:
           push: true
           tags: ${{steps.tag.outputs.image_name}}:${{steps.tag.outputs.image_tag}}
+          cache-from: type=registry,ref=${{ steps.tag.outputs.image_name }}:buildcache
+          cache-to: type=registry,ref=${{ steps.tag.outputs.image_name }}:buildcache,mode=max
