--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: 'Set up Docker Buildx'
         uses: docker/setup-buildx-action@v2
 
-      - name: 'Build and push dev'
+      - name: 'Build and push'
         id: docker_build
         uses: docker/build-push-action@v4
         with:
